// ==========================================
// 오늘 뭐 입지 (Today Outfit) - 데이터 모델 (ERD)
// AI 기반 옷장 관리 · 코디 추천 · 주간 플래너 서비스
// 작성: 8반 김민 / 2026.09
// ==========================================

// ==========================================
// Enum (상수 및 상태값 정의)
// ==========================================
Enum ClothingCategory {
  TOP     [note: '상의']
  BOTTOM  [note: '하의']
  SHOES   [note: '신발']
  HAT     [note: '모자']
  ACC     [note: '액세서리']
}

Enum SeasonType {
  SPRING  [note: '봄']
  SUMMER  [note: '여름']
  FALL    [note: '가을']
  WINTER  [note: '겨울']
  ALL     [note: '사계절']
}

Enum ClothingSource {
  PHOTO   [note: '사진 등록 - AI 이미지 분석 후 사용자가 확인/수정하여 저장']
  TEXT    [note: '문장 등록 - AI 문장 파싱으로 여러 벌 일괄 저장']
  MANUAL  [note: '직접 등록 - 사용자가 속성을 직접 입력']
}

Enum OutfitSource {
  AI        [note: 'AI 추천 - 상황 입력 기반 추천 (단건 / 주간)']
  MANUAL    [note: '직접 제작 - 옷장에서 의류를 골라 구성']
  RANDOM    [note: '오늘의 픽 - 홈 화면 카테고리별 랜덤 뽑기 후 확정']
  CHALLENGE [note: '챌린지 - 좌/우 선택 게임 결과 + AI 평가']
}

Enum AiRequestType {
  PHOTO_ANALYSIS     [note: '의류 사진 분석']
  TEXT_PARSE         [note: '의류 문장 파싱']
  OUTFIT_RECOMMEND   [note: '상황 기반 코디 추천']
  WEEKLY_RECOMMEND   [note: '주간 코디 추천']
  CHALLENGE_EVALUATE [note: '챌린지 코디 평가']
}

Enum AiRequestStatus {
  SUCCESS [note: 'AI 응답 성공']
  FAILED  [note: 'AI 응답 실패 (타임아웃, 인식 불가 등)']
}

// ==========================================
// 사용자
// ==========================================
Table users {
  id bigint [primary key, increment, note: 'PK: 사용자 고유 ID']
  email varchar(100) [not null, unique, note: '로그인 이메일 (소문자 정규화 후 저장)']
  password varchar(255) [not null, note: '암호화된 비밀번호 (BCrypt)']
  name varchar(30) [not null, note: '사용자 이름 (설정 화면 표시)']
  is_demo boolean [not null, default: false, note: '데모 체험 계정 여부 - "데모 계정으로 체험하기" 시 샘플 데이터와 함께 생성']
  created_at timestamp [not null, default: `now()`, note: '가입 일시']
  updated_at timestamp [note: '정보 수정 일시']

  Note: '''
  계정 탈퇴(POST /users/me/withdrawal) 시 사용자 레코드를 물리 삭제하며,
  하위 데이터(clothes, outfits, outfit_items, outfit_ai_tags, schedules, ai_requests)는 ON DELETE CASCADE로 함께 삭제된다.
  → 탈퇴 후 동일 이메일로 재가입 가능, 삭제 데이터는 복구 불가.
  '''
}

// ==========================================
// 옷장 (의류)
// ==========================================
Table clothes {
  id bigint [primary key, increment, note: 'PK: 의류 고유 ID']
  user_id bigint [not null, note: 'FK: 소유 사용자']
  name varchar(50) [not null, note: '의류 이름 (예: 블랙 슬랙스)']
  category ClothingCategory [not null, note: '카테고리']
  color varchar(10) [not null, note: '색상 - 허용값: 블랙/화이트/그레이/베이지/브라운/블루/골드 (API enum으로 검증)']
  season SeasonType [not null, default: 'ALL', note: '착용 계절']
  image_url varchar(500) [note: '업로드한 의류 사진 URL (선택). NULL이면 화면에서 카테고리+색상 대표 사진으로 대체']
  image_file_name varchar(255) [note: '업로드 원본 파일명 (의류 상세 화면 표시)']
  source ClothingSource [not null, note: '등록 경로 (의류 상세 "등록 경로" 표시)']
  created_at timestamp [not null, default: `now()`, note: '등록일']
  updated_at timestamp [note: '수정 일시']

  indexes {
    (user_id, category) [note: '옷장 카테고리 필터 / 챌린지·추천 후보 조회']
    (user_id, created_at) [note: '옷장 최신순 목록']
  }
}

// ==========================================
// 코디 (의류 조합)
// ==========================================
Table outfits {
  id bigint [primary key, increment, note: 'PK: 코디 고유 ID']
  user_id bigint [not null, note: 'FK: 소유 사용자']
  name varchar(50) [not null, note: '코디 이름']
  memo varchar(500) [note: '사용자 메모 (선택)']
  source OutfitSource [not null, note: '생성 경로 (목록/상세 칩 표시)']
  request_text varchar(500) [note: 'AI 추천 시 사용자가 입력한 상황 (source=AI 전용)']
  ai_reason text [note: 'AI 추천 이유 (source=AI 전용)']
  ai_score integer [note: 'AI 평가 점수 0~100 (source=CHALLENGE 전용, 평가 실패 시 NULL)']
  ai_comment varchar(500) [note: 'AI 평가 코멘트 (source=CHALLENGE 전용)']
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp

  indexes {
    (user_id, created_at) [note: '내 코디 최신순 목록']
  }
}

// 코디 ↔ 의류 (M:N 해소 테이블)
Table outfit_items {
  id bigint [primary key, increment, note: 'PK']
  outfit_id bigint [not null, note: 'FK: 소속 코디']
  clothing_id bigint [not null, note: 'FK: 구성 의류']
  item_order integer [not null, note: '표시 순서 (1부터). 직접 만들기 화면의 ↑/↓ 순서 변경 결과']

  indexes {
    (outfit_id, clothing_id) [unique, note: '같은 코디에 동일 의류 중복 방지']
    (outfit_id, item_order) [unique, note: '같은 코디 내 순서 중복 방지']
  }

  Note: '의류 삭제 시 해당 행만 CASCADE 삭제되고 코디는 남는다 (나머지 의류로 표시).'
}

// AI 평가 태그 (코디 1 : N 태그) - 배열 컬럼 대신 정규화
Table outfit_ai_tags {
  id bigint [primary key, increment, note: 'PK']
  outfit_id bigint [not null, note: 'FK: 소속 코디']
  tag varchar(30) [not null, note: '스타일 태그 (예: 캐주얼, 미니멀) - 화면에 #태그로 표시']

  indexes {
    (outfit_id, tag) [unique]
  }
}

// ==========================================
// 주간 플래너 (날짜별 코디 배치)
// ==========================================
Table schedules {
  id bigint [primary key, increment, note: 'PK: 배치 고유 ID']
  user_id bigint [not null, note: 'FK: 소유 사용자']
  plan_date date [not null, note: '착용 예정일']
  outfit_id bigint [not null, note: 'FK: 배치된 코디']
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [note: '다른 코디로 교체한 일시']

  indexes {
    (user_id, plan_date) [unique, note: '하루에 하나의 코디만 배치 - PUT 업서트 기준 키 (신규 201 / 교체 200)']
  }

  Note: '코디 삭제 시 해당 코디가 배치된 날짜도 CASCADE 삭제된다. 홈 화면 "오늘의 코디"는 plan_date = 오늘인 행으로 판단.'
}

// ==========================================
// AI 호출 이력 (호출 한도 · 실패 모니터링)
// ==========================================
Table ai_requests {
  id bigint [primary key, increment, note: 'PK']
  user_id bigint [not null, note: 'FK: 요청 사용자']
  type AiRequestType [not null, note: 'AI 기능 구분']
  status AiRequestStatus [not null, note: '처리 결과']
  latency_ms integer [note: 'AI 응답 소요 시간(ms)']
  created_at timestamp [not null, default: `now()`, note: '요청 일시']

  indexes {
    (user_id, created_at) [note: '사용자별 일일 호출 수 집계 → 한도 초과 시 429']
  }

  Note: 'AI 결과(분석 후보·추천안)는 사용자가 확인 후 저장할 때만 clothes/outfits에 기록하고, 이 테이블에는 호출 메타데이터만 남긴다.'
}

// ==========================================
// Relationships (테이블 간 관계 정의)
// ==========================================

// 사용자 1 : N 의류 / 코디 / 배치 / AI 호출
Ref: clothes.user_id > users.id [delete: cascade]
Ref: outfits.user_id > users.id [delete: cascade]
Ref: schedules.user_id > users.id [delete: cascade]
Ref: ai_requests.user_id > users.id [delete: cascade]

// 코디 M : N 의류 (outfit_items로 해소)
Ref: outfit_items.outfit_id > outfits.id [delete: cascade]
Ref: outfit_items.clothing_id > clothes.id [delete: cascade]

// 코디 1 : N AI 태그
Ref: outfit_ai_tags.outfit_id > outfits.id [delete: cascade]

// 배치 N : 1 코디
Ref: schedules.outfit_id > outfits.id [delete: cascade]
